# books

./: CMakeLists.txt  Main.qml  PdfScreen.qml  main.cpp
android/: AndroidManifest.xml
android/src/com/salih/books/: NativeClass.java
core/data/: author.cpp  author.h  book.h  category.h
core/database/: databasemanager.cpp  databasemanager.h
core/models/: basebooklistmodel.cpp  basebooklistmodel.h  booklistmodel.cpp  booklistmodel.h  categorylistmodel.cpp  categorylistmodel.h  favoritebooklistmodel.cpp  favoritebooklistmodel.h
core/repository/: authorrepository.cpp  authorrepository.h  bookcategoryrepository.cpp  bookcategoryrepository.h  bookrepository.cpp  bookrepository.h  categoryrepository.cpp  categoryrepository.h  favoritebookrepository.cpp  favoritebookrepository.h
core/repository/interfaces/: IBookCategoryRepository.h  ICategoryRepository.h  iAuthorrepository.h  iBookrepository.h  iFavoriteBookRepository.h  iTableRepository.h
fonts/comic-khazi-font/: info.txt
frontend/screens/BookListScreen/: AllBooks.qml  BookCategories.qml  BookItem.qml  BookList.qml  BookListItem.qml  BookListScreen.qml  CategoryBooks.qml  FavoriteBooks.qml
frontend/screens/PdfScreen/: PdfScreen.qml  PdfViewer.qml
frontend/screens/WelcomeScreen/: WelcomeScreen.qml
icons/fontello-07c00b8d/: config.json  demo.html
icons/fontello-07c00b8d/css/: fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
icons/fontello-07c00b8d/font/: fontello.eot
images/: books_icon_1
